# SPIR-V-Blast

./: .gitignore  .gitmodules  Arch.cmake  CMakeLists.txt  COMPILE.md  LANGUAGE.md  README.md  gen_by_hand.bat  generateConverter.py  include.cmake  shader.blast  shader2.blast  thirdparty.cmake
lang/: blast.l  blast.y
shaders/: shader.blast  shader2.blast  vert.blast
src/: CMakeLists.txt  args.cpp  args.hpp  args_parser.cpp  args_parser.hpp  args_processor.cpp  args_processor.hpp  compiler.cpp  compiler.hpp  compiler_nodes.cpp  compiler_nodes.hpp  compiler_parser.cpp  compiler_parser.hpp  compiler_parsers.hpp  compiler_state_machine.cpp  compiler_state_machine.hpp  compiler_states.cpp  compiler_symbols.cpp  compiler_symbols.hpp  compiler_symbols_parser.cpp  compiler_types.cpp  compiler_types_parser.cpp  compiler_types_parser.hpp  main.cpp  preprocessor.cpp  preprocessor.hpp  reader.cpp  reader.hpp  shader.cpp  shader.hpp  shader_preprocessed_info.cpp  shader_preprocessed_info.hpp  writer.cpp  writer.hpp
src/blast/: blast_types.hpp
src/compiler/: compiler.cpp  compiler.hpp  compiler_body_compilation_context.cpp  compiler_body_compilation_context.hpp  compiler_common.cpp  compiler_common.hpp  compiler_context.cpp  compiler_context.hpp  compiler_data.cpp  compiler_data.hpp  compiler_expressions.cpp  compiler_expressions.hpp  compiler_expressions_parser.cpp  compiler_expressions_parser.hpp  compiler_helper.cpp  compiler_helper.hpp  compiler_identifiers.cpp  compiler_identifiers.hpp  compiler_node.cpp  compiler_node.hpp  compiler_node_expression.cpp  compiler_node_expression.hpp  compiler_node_function.cpp  compiler_node_function.hpp  compiler_node_function_body.cpp  compiler_node_function_body.hpp  compiler_node_function_parameter.cpp  compiler_node_function_parameter.hpp  compiler_node_type.cpp  compiler_node_type.hpp  compiler_node_type_enum.hpp  compiler_node_variable.cpp  compiler_node_variable.hpp  compiler_nodes.cpp  compiler_nodes.hpp  compiler_parser.hpp  compiler_parsers.hpp  compiler_state.cpp  compiler_state.hpp  compiler_state_enum.hpp  (+16 more)
src/parser/: blast_parser.cpp  blast_scanner.cpp  common_parser.cpp  common_parser.hpp  compiler.cpp  compiler.hpp  compiler_expressions.cpp  compiler_expressions_parser.cpp  compiler_nodes.cpp  compiler_parsers.hpp  compiler_state_machine.hpp  compiler_states.hpp  compiler_symbols.hpp  compiler_symbols_parser.cpp  compiler_symbols_parser.hpp  compiler_types_parser.cpp  gen_classes.py  parser.cpp  parser.hpp  parser_abstract_syntax_tree_container.hpp  parser_common.cpp  parser_common.hpp  parser_context.cpp  parser_context.hpp  parser_expression_border_state.cpp  parser_expression_border_state.hpp  parser_expression_level_enum.hpp  parser_expression_stack.cpp  parser_expression_stack.hpp  parser_expressions.cpp  parser_expressions.hpp  parser_expressions_parser.cpp  parser_expressions_parser.hpp  parser_helper.cpp  parser_helper.hpp  parser_lex_context.hpp  parser_node_type_enum.hpp  parser_nodes.cpp  parser_nodes.hpp  parser_state.cpp  (+17 more)
src/translator/: translator.cpp  translator.hpp
test/: shader3.blast
